--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.6",
     "@types/uuid": "8.3.4",
     "axios": "0.27.2",
+    "bootstrap-icons": "^1.10.3",
     "gh-pages": "4.0.0",
     "git": "^0.1.5",
     "react": "18.2.0",
